--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^41.0.0",
+    "@ckeditor/ckeditor5-react": "^6.2.0",
+    "@types/react": "^18.2.48",
     "axios": "^1.6.5",
+    "date-fns": "^3.2.0",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.4",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
