--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.2.48",
     "axios": "^1.6.5",
     "date-fns": "^3.2.0",
+    "dompurify": "^3.0.8",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
     "next": "14.0.4",
