--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^41.0.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
+    "@headlessui/react": "^1.7.18",
     "@nextui-org/react": "^2.2.9",
     "@types/react": "^18.2.48",
     "axios": "^1.6.5",
